grammar.js
    bsv_package: $ => choice(
      seq('package', field('name', $.bsv_packageIde), ';',
        repeat(choice($.bsv_exportDecl, $.bsv_importDecl)),
        repeat($.bsv_packageStmt),
        'endpackage', optional(seq(':', $.bsv_packageIde))),
      seq(repeat(choice($.bsv_exportDecl, $.bsv_importDecl)),
        repeat($.bsv_packageStmt)
      )
    ),

    bsv_packageIde: $ => $._bsv_Identifier,

    // exports
    bsv_packageStmt: $ => choice(
      $.bsv_moduleDef,
      $.bsv_interfaceDecl,
      $.bsv_typeDef,
      $.bsv_varDecl,
      $.bsv_varAssign,
      $.bsv_functionDef,
      $.bsv_typeclassDef,
      $.bsv_typeclassInstanceDef,
      $.bsv_externModuleImport,
      $.bsv_externCImport,
      $.bsv_exportDecl,
      $.bsv_importDecl,
      // A bare macro invocation at package scope, e.g.
      //   `defSourceShimFF(FF, mkFIFOF)
      // expands to one or more package statements before compilation.
      prec.right(seq($.bsv_macroRef,
        optional(seq('(', optional(commaSepList1($.bsv_expression)), ')'))))
    ),

    // import "BDPI" — C function imported into BSV
    bsv_varDecl: $ => choice(
      seq($.bsv_type, commaSepList1($.bsv_varInit), ';'),
      // `let x = expr;` — type inferred declaration.
      // `let { a, b, c } = expr;` — tuple/struct destructuring form.
      seq('let',
        choice(alias($._bsv_identifier, $.bsv_varIde),
          seq('{',
            commaSepList1(choice(alias($._bsv_identifier, $.bsv_varIde), '_')),
            '}')),
        '=', $.bsv_expression, ';')
    ),
    bsv_varInit: $ =>
      seq(alias($._bsv_identifier, $.bsv_varIde),
        optional($.bsv_arrayDims),
        optional(seq('=', $.bsv_expression))),
    bsv_lValue: $ => choice($._bsv_identifier,
      seq($.bsv_lValue, '.', $._bsv_identifier),
      seq($.bsv_lValue, '[', $.bsv_expression, ']'),
      seq($.bsv_lValue, '[', $.bsv_expression,
        ':', $.bsv_expression, ']'),
      // Tuple destructuring lvalue: `{x, y} = expr ;`
      seq('{', commaSepList1(choice($._bsv_identifier, '_')), '}'),
    ),

    // register write: `lhs <= expr ;`
    bsv_regWrite: $ => choice(
      seq($.bsv_lValue, '<=', $.bsv_expression, ';'),
      seq('(', $.bsv_expression, ')', '<=', $.bsv_expression, ';')
    ),

    // user-defined types
    bsv_typeDef: $ => choice($.bsv_typedefSynonym,
      $.bsv_typedefEnum,
      $.bsv_typedefStruct,
      $.bsv_typedefTaggedUnion),
    bsv_derives: $ =>
      seq('deriving', '(', commaSepList1($.bsv_typeclassIde), ')'),
    bsv_typedefSynonym: $ =>
      seq('typedef', $.bsv_type,
        $.bsv_typeConcreteIde, optional($.bsv_typeFormals), ';'),
    bsv_typeFormals: $ =>
      seq('#', '(',
        commaSepList1(seq(optional('numeric'), 'type', $.bsv_typeVarIde)),
        ')'),
    bsv_typedefEnum: $ =>
      seq('typedef', 'enum', '{',
        commaSepList1($.bsv_typedefEnumElement),
        '}', $._bsv_Identifier, optional($.bsv_derives), ';'),
    bsv_typedefEnumElement: $ =>
      choice(seq($._bsv_Identifier, optional(seq('=', $.bsv_intLiteral))),
        seq($._bsv_Identifier, '[', $.bsv_intLiteral, ']',
          optional(seq('=', $.bsv_intLiteral))),
        seq($._bsv_Identifier, '[', $.bsv_intLiteral,
          ':', $.bsv_intLiteral, ']',
          optional(seq('=', $.bsv_intLiteral)))
      ),
    bsv_typedefStruct: $ =>
      seq('typedef', 'struct', '{',
        repeat($.bsv_structMember), '}',
        $.bsv_typeConcreteIde, optional($.bsv_typeFormals),
        optional($.bsv_derives), ';'),
    bsv_typedefTaggedUnion: $ =>
      seq('typedef', 'union', 'tagged', '{',
        repeat($.bsv_unionMember), '}',
        $.bsv_typeConcreteIde, optional($.bsv_typeFormals),
        optional($.bsv_derives), ';'),
    bsv_structMember: $ => choice(
      seq($.bsv_type, alias($._bsv_identifier, $.bsv_memberIde), ';'),
      seq($.bsv_subStruct, alias($._bsv_identifier, $.bsv_memberIde), ';'),
      seq($.bsv_subUnion, alias($._bsv_identifier, $.bsv_memberIde), ';'),
      seq('void', alias($._bsv_identifier, $.bsv_memberIde), ';'),
    ),
    bsv_unionMember: $ =>
      choice(seq($.bsv_type, $._bsv_Identifier, ';'),
        seq($.bsv_subStruct, $._bsv_Identifier, ';'),
        seq($.bsv_subUnion, $._bsv_Identifier, ';'),
        seq('void', $._bsv_Identifier, ';'),
      ),
    bsv_subStruct: $ =>
      seq('struct', '{', repeat($.bsv_structMember), '}'),
    bsv_subUnion: $ =>
      seq('union', 'tagged', '{', repeat($.bsv_unionMember), '}'),

    // extern module imports (import "BVI" ...)
    bsv_moduleDef: $ => seq(optional($.bsv_attributeInstances),
      $.bsv_moduleProto,
      repeat($.bsv_moduleStmt),
      'endmodule',
      optional(seq(':', alias($._bsv_identifier, $.bsv_moduleIde)))),
    bsv_moduleProto: $ => seq('module',
      optional(seq('[', $.bsv_type, ']')),
      alias($._bsv_identifier, $.bsv_moduleIde),
      optional($.bsv_moduleFormalParams),
      '(', optional($.bsv_moduleFormalArgs), ')',
      optional($.bsv_provisos),
      ';'),
    bsv_moduleFormalParams: $ =>
      seq('#', '(', commaSepList1($.bsv_moduleFormalParam), ')'),
    bsv_moduleFormalParam: $ => choice(
      seq(optional($.bsv_attributeInstances),
        optional('parameter'),
        $.bsv_type,
        // Plain `_` and multi-underscore names (e.g. `__`, `___`) are used
        // as placeholder/anonymous parameter names in BSV module headers.
        choice(alias($._bsv_identifier, $.bsv_paramIde), '_', $.bsv_wildcardName)),
      // function-typed parameter: `function Type name (args)`
      seq(optional($.bsv_attributeInstances),
        'function', $.bsv_type, alias($._bsv_identifier, $.bsv_functionIde),
        '(', commaSepList($.bsv_functionFormal), ')')
    ),
    bsv_moduleFormalArgs: $ =>
      choice(seq(optional($.bsv_attributeInstances), $.bsv_type),
        commaSepList1(seq(optional($.bsv_attributeInstances),
          $.bsv_type, alias($._bsv_identifier, $.bsv_paramIde)))),

    // module statements
    bsv_moduleStmt: $ => choice(
      $.bsv_moduleInst,
      $.bsv_methodDef,
      $.bsv_subinterfaceDef,
      $.bsv_rule,
      $.bsv_varDo,
      $.bsv_varDeclDo,
      $.bsv_regWrite,
      $.bsv_callStmt,
      $.bsv_returnStmt,
      $.bsv_varDecl,
      $.bsv_varAssign,
      $.bsv_functionDef,
      $.bsv_moduleDef,
      ctxtBeginEndStmt($, $.bsv_moduleStmt),
      ctxtIf($, $.bsv_moduleStmt),
      ctxtCase($, $.bsv_moduleStmt),
      ctxtCaseMatches($, $.bsv_moduleStmt),
      ctxtFor($, $.bsv_moduleStmt),
      ctxtWhile($, $.bsv_moduleStmt)
    ),

    // rules within a module
    bsv_subinterfaceDef: $ => seq(
      'interface',
      optional($.bsv_type),
      alias($._bsv_identifier, $.bsv_interfaceIde),
      choice(
        seq(';',
          repeat($.bsv_interfaceStmt),
          'endinterface',
          optional(seq(':', alias($._bsv_identifier, $.bsv_interfaceIde)))),
        seq('=', $.bsv_expression, ';')
      )
    ),

    bsv_interfaceStmt: $ => choice(
      $.bsv_methodDef,
      $.bsv_subinterfaceDef,
      $.bsv_expressionStmt
    ),

    // Statements allowed in expression-like contexts (begin/end, interface
    // expr, function body, etc.).
    bsv_methodDef: $ => choice(
      // Full-body form
      seq(
        'method',
        optional($.bsv_type),
        alias($._bsv_identifier, $.bsv_methodIde),
        optional(seq('(', optional($.bsv_methodFormals), ')')),
        optional($.bsv_implicitCond), ';',
        repeat($.bsv_actionStmt),
        'endmethod',
        optional(seq(':', alias($._bsv_identifier, $.bsv_methodIde)))
      ),
      // Assignment form: `method ... = expr ;`
      seq(
        'method',
        optional($.bsv_type),
        alias($._bsv_identifier, $.bsv_methodIde),
        optional(seq('(', optional($.bsv_methodFormals), ')')),
        optional($.bsv_implicitCond), '=',
        $.bsv_expression, ';'
      )
    ),
    bsv_methodFormals: $ => commaSepList1($.bsv_methodFormal),
    bsv_methodFormal: $ => seq(optional($.bsv_type),
      choice(alias($._bsv_identifier, $.bsv_paramIde), '_')),
    bsv_implicitCond: $ => seq('if', '(', $.bsv_condPredicate, ')'),
    bsv_condPredicate: $ => prec.left(seq(
      $.bsv_exprOrCondPattern,
      repeat(prec.left(seq('&&&', $.bsv_exprOrCondPattern)))
    )),
    bsv_exprOrCondPattern: $ => choice(
      $.bsv_expression,
      seq($.bsv_expression, 'matches', $.bsv_pattern)
    ),

    // function definition
    bsv_functionDef: $ => choice(
      seq(optional($.bsv_attributeInstances),
        $.bsv_functionProto,
        $.bsv_functionBody,
        'endfunction',
        optional(seq(':', alias($._bsv_identifier, $.bsv_functionIde)))),
      // Definition by assignment
      seq(optional($.bsv_attributeInstances),
        $.bsv_functionProtoAssign, '=',
        $.bsv_expression, ';')
    ),
    // Function return type may be parenthesized — used when the return type
    // itself spans multiple lines for readability. Hidden (underscore) rule
    // so the tree continues to expose plain `bsv_type` either way.
    _bsv_functionReturnType: $ =>
      choice($.bsv_type, seq('(', $.bsv_type, ')')),
    bsv_functionProto: $ =>
      seq('function', optional($._bsv_functionReturnType),
        choice(alias($._bsv_identifier, $.bsv_functionIde),
          seq($.bsv_macroRef, '(',
            commaSepList1(alias($._bsv_identifier, $.bsv_paramIde)), ')')),
        optional(seq('(', commaSepList($.bsv_functionFormal), ')')),
        optional($.bsv_provisos), ';'),
    bsv_functionFormal: $ => choice(
      seq(optional($.bsv_type),
        choice(alias($._bsv_identifier, $.bsv_paramIde), '_')),
      $.bsv_functionType
    ),
    bsv_functionBody: $ => choice(
      $.bsv_actionBlock,
      $.bsv_actionValueBlock,
      repeat1($.bsv_functionBodyStmt)
    ),
    bsv_returnStmt: $ => seq('return', $.bsv_expression, ';'),

    // typeclass declaration
    bsv_typeclassIde: $ => seq(
      optional(seq($.bsv_packageIde, '::')),
      $._bsv_Identifier
    ),
    bsv_expression: $ => choice(
      $.bsv_condExpr,
      $.bsv_unaryExpr,
      $.bsv_binaryExpr,
      $.bsv_exprPrimary
    ),

    bsv_exprPrimary: $ => choice(
      $._bsv_identifier,
      $._bsv_Identifier,
      // Package-qualified name: `Package::name` or `Package::Name`
      seq($.bsv_packageIde, '::',
        choice($._bsv_identifier, $._bsv_Identifier)),
      $.bsv_macroRef,
      $.bsv_intLiteral,
      $.bsv_realLiteral,
      $.bsv_stringLiteral,
      '?',
      $.bsv_bitConcat,
      $.bsv_bitSelect,
      $.bsv_functionCall,
      $.bsv_methodCall,
      $.bsv_fieldSelect,
      $.bsv_valueOfExpr,
      $.bsv_typeAssertion,
      $.bsv_beginEndExpr,
      $.bsv_actionBlock,
      $.bsv_actionValueBlock,
      $.bsv_structExpr,
      $.bsv_taggedUnionExpr,
      $.bsv_interfaceExpr,
      $.bsv_rulesExpr,
      $.bsv_seqFsmStmt,
      $.bsv_parFsmStmt,
      $.bsv_caseExpr,
      seq('(', $.bsv_expression, ')')
    ),

    // case expression — returns a value. Supports both plain and `matches`.
    bsv_unaryExpr: $ =>
      prec(15, seq($.bsv_unop, $.bsv_expression)),

    // Binary operators tiered by precedence (matches BSV reference §10.3)
    bsv_binaryExpr: $ => choice(
      prec.right(14, seq($.bsv_expression, '**', $.bsv_expression)),
      prec.left(14, seq($.bsv_expression, choice('*', '/', '%'),
        $.bsv_expression)),
      prec.left(13, seq($.bsv_expression, choice('+', '-'),
        $.bsv_expression)),
      prec.left(12, seq($.bsv_expression, choice('<<', '>>'),
        $.bsv_expression)),
      prec.left(11, seq($.bsv_expression, choice('<=', '>=', '<', '>'),
        $.bsv_expression)),
      prec.left(10, seq($.bsv_expression, choice('==', '!='),
        $.bsv_expression)),
      prec.left(9, seq($.bsv_expression, '&', $.bsv_expression)),
      prec.left(8, seq($.bsv_expression, choice('^', '^~', '~^'),
        $.bsv_expression)),
      prec.left(7, seq($.bsv_expression, '|', $.bsv_expression)),
      prec.left(6, seq($.bsv_expression, '&&', $.bsv_expression)),
      prec.left(5, seq($.bsv_expression, '||', $.bsv_expression)),
      // `&&&` is primarily the guard/pattern separator in condPredicate, but
      // BSV code also uses it as a lowest-precedence AND inside ordinary
      // expressions (e.g. `!(x >= 0 &&& x <= 7)`).
      prec.left(4, seq($.bsv_expression, '&&&', $.bsv_expression))
    ),

    bsv_unop: $ =>
      choice('+', '-', '!', '~', '&', '~&', '|', '~|', '^', '^~', '~^'),

    // Postfix exprPrimary operations — left-associative, high precedence
    bsv_functionCall: $ => prec.left(20, seq(
      $.bsv_exprPrimary, '(',
      optional(commaSepList1(choice(
        $.bsv_expression,
        seq('clocked_by', $.bsv_expression),
        seq('reset_by', $.bsv_expression)
      ))), ')'
    )),
    bsv_fieldSelect: $ => prec.left(19, seq(
      $.bsv_exprPrimary, '.',
      alias(choice($._bsv_identifier, $._bsv_Identifier), $.bsv_memberIde)
    )),
    bsv_bitSelect: $ => prec.left(20, seq(
      $.bsv_exprPrimary, '[', $.bsv_expression,
      optional(seq(':', $.bsv_expression)), ']'
    )),
    bsv_callStmt: $ => seq($.bsv_exprPrimary, ';'),

    // valueOf(type) / valueof(type)
    bsv_actionBlock: $ =>
      prec.right(seq('action', optional(seq(':', $._bsv_identifier)),
        repeat($.bsv_actionStmt),
        'endaction', optional(seq(':', $._bsv_identifier)))),
    bsv_actionStmt: $ => choice(
      $.bsv_regWrite,
      $.bsv_varDo,
      $.bsv_varDeclDo,
      $.bsv_callStmt,
      $.bsv_actionBlock,
      // An actionvalue block can appear as the body of a value method —
      // accept it here without a trailing `;` so the `endactionvalue`
      // keyword terminates the stmt.
      $.bsv_actionValueBlock,
      $.bsv_varDecl,
      $.bsv_varAssign,
      $.bsv_functionDef,
      $.bsv_moduleDef,
      $.bsv_returnStmt,
      ctxtBeginEndStmt($, $.bsv_actionStmt),
      ctxtIf($, $.bsv_actionStmt),
      ctxtCase($, $.bsv_actionStmt),
      ctxtCaseMatches($, $.bsv_actionStmt),
      ctxtFor($, $.bsv_actionStmt),
      ctxtWhile($, $.bsv_actionStmt)
    ),

    // actionvalue / endactionvalue block — action + return value
    bsv_type: $ =>
      choice(seq($.bsv_typeIde,
        optional(seq('#', '(', commaSepList1($.bsv_type), ')'))),
        $.bsv_typeNat,
        $.bsv_macroRef,
        // Macro with arguments as a type expression, e.g.
        //   Bit#(`sub2(base_))
        seq($.bsv_macroRef, '(', commaSepList1($.bsv_type), ')'),
        $.bsv_functionType,
        // `module #(...)` — module-type (polymorphic module) used as a type
        seq('module', '#', '(', commaSepList1($.bsv_type), ')'),
        seq('bit', '[', $.bsv_typeNat, ':', $.bsv_typeNat, ']')),
    bsv_typeVarIde: $ => choice($._bsv_identifier, '_'),
    bsv_typeConcreteIde: $ => seq(
      optional(seq($.bsv_packageIde, '::')),
      $._bsv_Identifier
    ),
    bsv_typeIde: $ => choice($.bsv_typeConcreteIde, $.bsv_typeVarIde),
    // Numeric literal as type — most commonly a decimal number, but BSV
    // also accepts other bases (e.g. `typedef 'h4000_0000 Foo;`).
    bsv_typeNat: $ => choice(/[0-9]+/, $.bsv_baseLiteral),
    // Backtick macro reference (preprocessor macro expansion point).
    // Can appear inline as a type parameter, numeric, or expression.
    bsv_provisos: $ => seq('provisos', '(', commaSepList1($.bsv_proviso), ')'),
    bsv_proviso: $ =>
      seq($.bsv_typeclassIde, '#', '(', commaSepList1($.bsv_type), ')'),

    // attributes, guiding the compiler
    bsv_intLiteral: $ => choice("'0",
      "'1",
      $.bsv_sizedIntLiteral,
      $.bsv_unsizedIntLiteral),
    bsv_sizedIntLiteral: $ => seq($.bsv_bitWidth, $.bsv_baseLiteral),
    bsv_unsizedIntLiteral: $ =>
      choice(seq(optional($.bsv_sign), $.bsv_baseLiteral),
        seq(optional($.bsv_sign), /[0-9]+/)),
    bsv_bitWidth: $ => /[0-9]+/,
    _bsv_identifier: $ => choice(
      /[$_]*[a-z][a-zA-Z0-9$_]*/,
      /\\[^ \t\r\n]+/
    ),
