test/corpus/BSV_temp.txt
=================
temp test
=================

module mkSpecFifo#(
    SpecFifoSched sched, // schedule EHR ordering
    Bool lazyEnq // whether we calculate enq guard lazily
)(
    SpecFifo#(size, t, validPortNum, sbPortNum)
) provisos (
    Alias#(idxT, Bit#(TLog#(size))),
    Bits#(t, _tsz),
    FShow#(t)
);
    interface SpeculationUpdate specUpdate;
        method Action correctSpeculation(SpecBits mask);
            // clear spec bits for all entries
            function Action correctSpec(Integer i);
            action
                SpecBits sb = specBits[i][sbCorrectSpecPort];
                specBits[i][sbCorrectSpecPort] <= sb & mask;
            endaction
            endfunction
            Vector#(size, Integer) idxVec = genVector;
            joinActions(map(correctSpec, idxVec));
        endmethod

        method Action incorrectSpeculation(Bool kill_all, SpecTag specTag);
            // clear entries
            function Action incorrectSpec(Integer i);
            action
                SpecBits sb = specBits[i][sched.sbWrongSpecPort];
                if(kill_all || sb[specTag] == 1) begin
                    valid[i][sched.validWrongSpecPort] <= False; // ordered after deq
                end
            endaction
            endfunction
            Vector#(size, Integer) idxVec = genVector;
            joinActions(map(incorrectSpec, idxVec));
            // make conflict with others
            wrongSpec_enq_conflict.send;
            wrongSpec_canon_conflict.send;
            wrongSpec_deq_conflict.send;
        endmethod
    endinterface
endmodule

-------

(bsv_package
  (bsv_packageStmt
    (bsv_moduleDef
      (bsv_moduleProto
        (bsv_moduleIde)
        (bsv_moduleFormalParams
          (bsv_moduleFormalParam
            (bsv_type
              (bsv_typeIde
                (bsv_typeConcreteIde)))
            (bsv_paramIde))
          (bsv_line_comment)
          (bsv_moduleFormalParam
            (bsv_type
              (bsv_typeIde
                (bsv_typeConcreteIde)))
            (bsv_paramIde))
          (bsv_line_comment))
        (bsv_moduleFormalArgs
          (bsv_type
            (bsv_typeIde
              (bsv_typeConcreteIde))
            (bsv_type
              (bsv_typeIde
                (bsv_typeVarIde)))
            (bsv_type
              (bsv_typeIde
                (bsv_typeVarIde)))
            (bsv_type
              (bsv_typeIde
                (bsv_typeVarIde)))
            (bsv_type
              (bsv_typeIde
                (bsv_typeVarIde)))))
        (bsv_provisos
          (bsv_proviso
            (bsv_typeclassIde)
            (bsv_type
              (bsv_typeIde
                (bsv_typeVarIde)))
            (bsv_type
              (bsv_typeIde
                (bsv_typeConcreteIde))
              (bsv_type
                (bsv_typeIde
                  (bsv_typeConcreteIde))
                (bsv_type
                  (bsv_typeIde
                    (bsv_typeVarIde))))))
          (bsv_proviso
            (bsv_typeclassIde)
            (bsv_type
              (bsv_typeIde
                (bsv_typeVarIde)))
            (bsv_type
              (bsv_typeIde
                (bsv_typeVarIde))))
          (bsv_proviso
            (bsv_typeclassIde)
            (bsv_type
              (bsv_typeIde
                (bsv_typeVarIde))))))
      (bsv_moduleStmt
        (bsv_subinterfaceDef
          (bsv_type
            (bsv_typeIde
              (bsv_typeConcreteIde)))
          (bsv_interfaceIde)
          (bsv_interfaceStmt
            (bsv_methodDef
              (bsv_type
                (bsv_typeIde
                  (bsv_typeConcreteIde)))
              (bsv_methodIde)
              (bsv_methodFormals
                (bsv_methodFormal
                  (bsv_type
                    (bsv_typeIde
                      (bsv_typeConcreteIde)))
                  (bsv_paramIde)))
              (bsv_line_comment)
              (bsv_actionStmt
                (bsv_functionDef
                  (bsv_functionProto
                    (bsv_type
                      (bsv_typeIde
                        (bsv_typeConcreteIde)))
                    (bsv_functionIde)
                    (bsv_functionFormal
                      (bsv_type
                        (bsv_typeIde
                          (bsv_typeConcreteIde)))
                      (bsv_paramIde)))
                  (bsv_functionBody
                    (bsv_actionBlock
                      (bsv_actionStmt
                        (bsv_varDecl
                          (bsv_type
                            (bsv_typeIde
                              (bsv_typeConcreteIde)))
                          (bsv_varInit
                            (bsv_varIde)
                            (bsv_expression
                              (bsv_exprPrimary
                                (bsv_bitSelect
                                  (bsv_exprPrimary
                                    (bsv_bitSelect
                                      (bsv_exprPrimary)
                                      (bsv_expression
                                        (bsv_exprPrimary))))
                                  (bsv_expression
                                    (bsv_exprPrimary))))))))
                      (bsv_actionStmt
                        (bsv_regWrite
                          (bsv_lValue
                            (bsv_lValue
                              (bsv_lValue)
                              (bsv_expression
                                (bsv_exprPrimary)))
                            (bsv_expression
                              (bsv_exprPrimary)))
                          (bsv_expression
                            (bsv_binaryExpr
                              (bsv_expression
                                (bsv_exprPrimary))
                              (bsv_expression
                                (bsv_exprPrimary))))))))))
              (bsv_actionStmt
                (bsv_varDecl
                  (bsv_type
                    (bsv_typeIde
                      (bsv_typeConcreteIde))
                    (bsv_type
                      (bsv_typeIde
                        (bsv_typeVarIde)))
                    (bsv_type
                      (bsv_typeIde
                        (bsv_typeConcreteIde))))
                  (bsv_varInit
                    (bsv_varIde)
                    (bsv_expression
                      (bsv_exprPrimary)))))
              (bsv_actionStmt
                (bsv_callStmt
                  (bsv_exprPrimary
                    (bsv_functionCall
                      (bsv_exprPrimary)
                      (bsv_expression
                        (bsv_exprPrimary
                          (bsv_functionCall
                            (bsv_exprPrimary)
                            (bsv_expression
                              (bsv_exprPrimary))
                            (bsv_expression
                              (bsv_exprPrimary)))))))))))
          (bsv_interfaceStmt
            (bsv_methodDef
              (bsv_type
                (bsv_typeIde
                  (bsv_typeConcreteIde)))
              (bsv_methodIde)
              (bsv_methodFormals
                (bsv_methodFormal
                  (bsv_type
                    (bsv_typeIde
                      (bsv_typeConcreteIde)))
                  (bsv_paramIde))
                (bsv_methodFormal
                  (bsv_type
                    (bsv_typeIde
                      (bsv_typeConcreteIde)))
                  (bsv_paramIde)))
              (bsv_line_comment)
              (bsv_actionStmt
                (bsv_functionDef
                  (bsv_functionProto
                    (bsv_type
                      (bsv_typeIde
                        (bsv_typeConcreteIde)))
                    (bsv_functionIde)
                    (bsv_functionFormal
                      (bsv_type
                        (bsv_typeIde
                          (bsv_typeConcreteIde)))
                      (bsv_paramIde)))
                  (bsv_functionBody
                    (bsv_actionBlock
                      (bsv_actionStmt
                        (bsv_varDecl
                          (bsv_type
                            (bsv_typeIde
                              (bsv_typeConcreteIde)))
                          (bsv_varInit
                            (bsv_varIde)
                            (bsv_expression
                              (bsv_exprPrimary
                                (bsv_bitSelect
                                  (bsv_exprPrimary
                                    (bsv_bitSelect
                                      (bsv_exprPrimary)
                                      (bsv_expression
                                        (bsv_exprPrimary))))
                                  (bsv_expression
                                    (bsv_exprPrimary
                                      (bsv_fieldSelect
                                        (bsv_exprPrimary)
                                        (bsv_memberIde))))))))))
                      (bsv_actionStmt
                        (bsv_condPredicate
                          (bsv_exprOrCondPattern
                            (bsv_expression
                              (bsv_binaryExpr
                                (bsv_expression
                                  (bsv_exprPrimary))
                                (bsv_expression
                                  (bsv_binaryExpr
                                    (bsv_expression
                                      (bsv_exprPrimary
                                        (bsv_bitSelect
                                          (bsv_exprPrimary)
                                          (bsv_expression
                                            (bsv_exprPrimary)))))
                                    (bsv_expression
                                      (bsv_exprPrimary
                                        (bsv_intLiteral
                                          (bsv_unsizedIntLiteral))))))))))
                        (bsv_actionStmt
                          (bsv_actionStmt
                            (bsv_regWrite
                              (bsv_lValue
                                (bsv_lValue
                                  (bsv_lValue)
                                  (bsv_expression
                                    (bsv_exprPrimary)))
                                (bsv_expression
                                  (bsv_exprPrimary
                                    (bsv_fieldSelect
                                      (bsv_exprPrimary)
                                      (bsv_memberIde)))))
                              (bsv_expression
                                (bsv_exprPrimary))))
                          (bsv_line_comment)))))))
              (bsv_actionStmt
                (bsv_varDecl
                  (bsv_type
                    (bsv_typeIde
                      (bsv_typeConcreteIde))
                    (bsv_type
                      (bsv_typeIde
                        (bsv_typeVarIde)))
                    (bsv_type
                      (bsv_typeIde
                        (bsv_typeConcreteIde))))
                  (bsv_varInit
                    (bsv_varIde)
                    (bsv_expression
                      (bsv_exprPrimary)))))
              (bsv_actionStmt
                (bsv_callStmt
                  (bsv_exprPrimary
                    (bsv_functionCall
                      (bsv_exprPrimary)
                      (bsv_expression
                        (bsv_exprPrimary
                          (bsv_functionCall
                            (bsv_exprPrimary)
                            (bsv_expression
                              (bsv_exprPrimary))
                            (bsv_expression
                              (bsv_exprPrimary)))))))))
              (bsv_line_comment)
              (bsv_actionStmt
                (bsv_callStmt
                  (bsv_exprPrimary
                    (bsv_fieldSelect
                      (bsv_exprPrimary)
                      (bsv_memberIde)))))
              (bsv_actionStmt
                (bsv_callStmt
                  (bsv_exprPrimary
                    (bsv_fieldSelect
                      (bsv_exprPrimary)
                      (bsv_memberIde)))))
              (bsv_actionStmt
                (bsv_callStmt
                  (bsv_exprPrimary
                    (bsv_fieldSelect
                      (bsv_exprPrimary)
                      (bsv_memberIde))))))))))))
